# tw-quant

./: .gitignore  README.md  README_ETF.md  candidates_1.csv  candidates_2.csv  candidates_3.csv  candidates_full.csv  config.json  config_etf.json  dump_candidates.py  etf_screener.py  etf_top10_holdings.py  pyproject.toml  requirements.txt  stock_screener.py  test_candidates.csv
common/: __init__.py  cache.py  config.py  etf_yahoo.py  kd.py  logger.py  rate_limit.py  scoring.py  serialization.py  tdcc.py  twse.py  yf_utils.py
docs/: data-correctness-audit.md  fix_c11_chip_alignment_20260610.md  fix_c14_c15_position_redesign_20260610.md  fix_c8_redundant_removal_20260610.md  fix_etf_c5_premium_20260610.md  improvement.md  kd_warmup_c18_extract_20260610.md  logic_improve_update_2026-06-10.md  merge_improvement_docs_20260610.md  p2_common_module_extraction_20260610.md  tw-quant-fix1-c13-hardreject_20260611.md  tw-quant-fix2-c19-bonus_20260611.md  tw-quant-fix3-c8-fillrate_20260611.md  tw-quant-fix4-c13-dealer_20260612.md  tw-quant-fix5-leveraged-type-adjusted_20260612.md  tw-quant-fix6-7-e5-and-c3c14-notes_20260612.md  tw-quant-fixes_20260612.md  tw-quant-pending-fixes_20260611.md  tw-quant-readme-desc-update_20260612.md  tw-quant-readme-update_20260612.md  tw-quant-review_20260611.md  tw-quant-review_20260612.md  tw-quant-stock-screener-effect_20260612.md  tw_quant_review_20260610.md
tests/: test_cache.py  test_scoring.py  test_tech.py
tmp/: all.txt  dump-all.py
